--- a/freethyme/package.json
+++ b/freethyme/package.json
@@ -21,17 +21,17 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
-    "@nebular/eva-icons": "5.0.0",
+    "@nebular/eva-icons": "^5.0.0",
     "@nebular/theme": "^5.0.0",
     "angularfire2": "^5.4.2",
     "eva-icons": "^1.1.2",
-    "firebase": "^7.10.0",
+    "firebase": "^7.14.6",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.4",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "~9.0.4",
     "@angular/compiler-cli": "~9.0.3",
     "@angular/language-service": "~9.0.3",
