--- a/freethyme/package.json
+++ b/freethyme/package.json
@@ -26,6 +26,7 @@
     "angularfire2": "^5.4.2",
     "eva-icons": "^1.1.2",
     "firebase": "^7.14.6",
+    "ngx-ellipsis": "^2.3.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
