--- a/freethyme/package.json
+++ b/freethyme/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^9.0.5",
     "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.0.3",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
