--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ Thumbs.db
 # Environment Variables
 /src/environments/environment.ts
 /src/environments/environment.prod.ts
+
+# Virtual Environment Python
+/functions/venv/*
