Calendar Month View and Add Cal Dialog

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
     "@nebular/eva-icons": "^5.0.0",
+    "angular-calendar": "^0.28.16",
     "angularfire2": "^5.4.2",
+    "date-fns": "^2.14.0",
     "eva-icons": "^1.1.2",
     "firebase": "^7.14.6",
     "ngx-ellipsis": "^2.3.1",
