--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "python.pythonPath": "C:\\Users\\Jason Jose\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+  "python.pythonPath": "./functions/venv/bin/python"
 }
