--- a/functions/calculate-free-time/requirements.txt
+++ b/functions/calculate-free-time/requirements.txt
@@ -1,6 +1,7 @@
 cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
+datetime==4.3
 google-api-core==1.17.0
 google-auth==1.16.0
 google-cloud-core==1.3.0
