--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@angular/platform-browser": "~9.0.3",
     "@angular/platform-browser-dynamic": "~9.0.3",
     "@angular/router": "~9.0.3",
+    "@azure/msal-angular": "^1.0.0",
+    "@microsoft/microsoft-graph-client": "^2.0.0",
     "@nebular/eva-icons": "^5.0.0",
     "angular-calendar": "^0.28.16",
     "angularfire2": "^5.4.2",
     "date-fns": "^2.14.0",
     "eva-icons": "^1.1.2",
     "firebase": "^7.14.6",
+    "msal": "^1.3.2",
     "ngx-ellipsis": "^2.3.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.10.0",
