--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^2.14.0",
     "eva-icons": "^1.1.2",
     "firebase": "^7.14.6",
+    "firebase-functions": "^3.11.0",
     "msal": "^1.3.2",
     "ngx-ellipsis": "^2.3.1",
     "rxjs": "^6.5.4",
